# cmake_cpp_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: StandardProjectSettings.cmake  ThirdPartyDeps.cmake  Version.cmake  projectConfig.cmake.in
tools/: project.imp  run_static_analysis.sh
